<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SIMBA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Logout</string>
    <string name="simba">Shopping-cart Insights through Market Basket Analysis</string>
    <string name="signin">Sign In</string>
    <string name="signup">Create your account</string>
    <string name="note">GOOD TO SEE YOU</string>
    <string name="welcomenote">Welcome, please login below</string>
    <string name="email">Email address</string>
    <string name="continueshopping_"> Show Shopping List </string>
    <string name="createshopping_"> Create Shopping List </string>
    <string name="password">Password</string>
    <string name="loggedin">Log In</string>
    <string name="shoppinglist_comments">SIMBA provides you a easy shopping list manager!</string>
    <string name="forgot">Forgot your password?</string>
    <string name="signupnote">Fill in your info to sign up</string>
    <string name="signuplabel">Sign Up</string>
    <string name="name">Whats your Name?</string>
    <string name="verify">Verify your Account</string>
    <string name="contact">Contact</string>
    <string name="birthday"> Birthday : dd/mm/yy</string>
    <string name="address">Address</string>
    <string name="forgotlabel">Unlock your Account !</string>
    <string name="RetypePassword">Confirm Password</string>
    <string name="confirmlabel">Confirm</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_results">Results</string>
    <string name="verify_comments">PIN number has been send to your email.</string>
    <string name="cancelverify_">Verify Later</string>
    <string name="name_comments">Using your real name will be appreciated.</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="pinname">PIN Number</string>
    <string name="continue_">Continue</string>
    <string name="verify_">Verify Now</string>
    <string name="email_address">Enter Your Email Address</string>
    <string name="email_comments">You will use this email when you log in and if you ever need to reset your password</string>
    <string name="enter_password">Enter your password</string>
    <string name="password_comments">Enter a combination of at least six letters  and numbers</string>
    <string name="secret_question">Secret Question</string>
    <string name="question">Whats your grandfather home town ?</string>
    <string name="answer">Enter answer</string>
    <string name="secret_question_comments">This question will be asked from you along with email address if you forgot your password</string>
    <string name="resetpassword">Reset your Password by entering new one ....</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Change Password</string>
    <string name="resetpasswordlabel">Reset your Password</string>
    
</resources>
