<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:text="@string/verify"
        android:textSize="32sp"
        android:textColor="#3B5998"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/verify_comments" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint= "@string/email"
        android:inputType="textCapSentences" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/usernameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF0000" />

    <EditText
        android:id="@+id/pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/pinname"
        android:inputType="textCapSentences" />

    <Button
        android:id="@+id/verify_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/pin"
        android:layout_marginTop="18dp"
        android:background="@drawable/continuebtn"
        android:text="@string/verify_"
        android:textColor="#409ed3" />

    <Button
        android:id="@+id/cancel_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/verify_pin"
        android:layout_marginTop="15dp"
        android:background="@drawable/continuebtn"
        android:text="@string/cancelverify_"
        android:textColor="#409ed3" />

</RelativeLayout>
