<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#f7f7f7">

    <Button
        android:id="@+id/continue_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/emailaddress"
        android:layout_marginTop="70dp"
        android:background="@drawable/continuebtn"
        android:text="@string/continue_"
        android:textColor="#409ed3" />

    <EditText
        android:id="@+id/emailaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/email_comments" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:text="@string/email_address"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#3B5998"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emailaddress"
        android:layout_centerHorizontal="true"
        android:textColor="#FF0000"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
