<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7" >

    <ImageView
        android:id="@+id/unlockview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23sp"
        android:layout_marginTop="28sp"
        android:src="@drawable/unlockicon" />

    <TextView
        android:id="@+id/forgotlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/unlockview"
        android:layout_toRightOf="@+id/unlockview"
        android:text="@string/forgotlabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#3B5998" />

    <Button
        android:id="@+id/confirmbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/confirmPassword"
        android:layout_marginTop="50dp"
        android:background="@drawable/continuebtn"
        android:text="@string/confirmlabel"
        android:textColor="#409ed3" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordupdate"
        android:layout_alignRight="@+id/passwordupdate"
        android:layout_below="@+id/unlockview"
        android:layout_marginTop="158dp"
        android:ems="10"
        android:hint="@string/RetypePassword"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordupdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/confirmPassword"
        android:layout_alignLeft="@+id/unlockview"
        android:layout_alignRight="@+id/forgotlabel"
        android:layout_marginBottom="77dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordupdate"
        android:layout_alignLeft="@+id/passwordupdate"
        android:layout_marginBottom="20dp"
        android:text="@string/resetpassword"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/unlockview"
        android:layout_alignRight="@+id/forgotlabel"
        android:textColor="#FF0000" />

</RelativeLayout>