<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.SIMBA.Welcome.StartupActivity"
    android:background="@drawable/main_page"
     >

    <ImageView
        android:id="@+id/logoview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/simbatext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/logoview"
        android:gravity="center"
        android:text="@string/simba"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#C2996B" />

    <Button
        android:id="@+id/signinbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/simbatext"
        android:layout_marginTop="93sp"
        android:background="@drawable/fbutton"
        android:textColor="#FFFFFF"
        android:text="@string/signin" />

    <Button
        android:id="@+id/singupbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signinbtn"
        android:layout_below="@+id/signinbtn"
        android:layout_marginTop="30sp"
        android:background="@drawable/fbutton"
        android:textColor="#FFFFFF"
        android:text="@string/signup" />

</RelativeLayout>
